# LeetCodeParser

./: .env.example  README.md  main.py  pyproject.toml  requirements.txt
Python/1-100/42. Trapping Rain Water/: name_task.py  v1.py
Python/100-200/105. Construct Binary Tree from Preorder and Inorder Traversal/: name_task.py  v1.py
Python/1000-1100/1011. Capacity To Ship Packages Within D Days/: name_task.py  v2.py
