[tool.poetry]
name = "parcer-for-leetcode"
version = "0.1.0"
description = ""
authors = ["vaduska <vadimsalapugin@gmail.com>"]
readme = "README.md"
packages = [{include = "parcer_for_leetcode"}]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "4.8.0"
lxml = "4.9.2"
beautifulsoup4 = "4.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
